--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
       <input type="button" name="startstop" value="start!" onClick="chronoStart()" />
       <input type="button" name="reset" value="reset!" onClick="chronoReset()" />
     </form>
-    <span id="chronotime">0:00:00:00</span>
+    <span id="chronotime">0:00</span>
     <button onclick="timeForABreak()">BREAK</button>
   </div>
   <div id="tomatoContainer">
+  </div>
+  <div id="pauseContainer">
   </div>
   
 </body>
